Fixed navbar scaling problems on mobile resolutions, added reference to original template

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,9 +2,7 @@
 @import url("fontawesome-all.min.css");
 
 /*
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Built off of Miniport by HTML5 UP
 */
 
 html, body, div, span, applet, object,
@@ -76,6 +74,12 @@ input, select, textarea {
 .center {
 	text-align: center;
   }
+
+
+p 
+{ 
+	display: inline-block; 
+}
 
 /* Basic */
 
@@ -285,6 +289,24 @@ input, select, textarea {
 				.container.medium {
 					width: 100%;
 				}
+
+		}
+
+		@media screen and (max-width: 551px) {
+
+			.container {
+				width: 100%;
+				max-width: calc(100% - 30px);
+			}
+
+				.container.medium {
+					width: 100%;
+				}
+
+
+				.hidden-mobile {
+					display: none;
+				  }
 
 		}
 
